--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="conteudo-principal">
-    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
-<div class="botoes">
-    <button class="botao">Cursos na Alura</button>
-    <button class="botao">Criar projetos em Javascript</button>
-    <button class="botao">Criar um portfolio</button>
-    <button class="botao">Atualizar meu currículo</button>
-</div>
-</section>
+  <section class="conteudo-principal">
+      <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+      <div class="botoes">
+          <button class="botao">Cursos na Alura</button>
+          <button class="botao">Criar projetos em Javascript</button>
+          <button class="botao">Criar um portfolio</button>
+          <button class="botao">Atualizar meu currículo</button>
+      </div>
+  </section>
 </body>
 </html>
